bonus/istio/destinationrule-frontend.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend
  namespace: app
  labels:
    app.kubernetes.io/part-of: kubiquest
spec:
  host: frontend-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
